@@ -1,4 +1,6 @@
 current:
+  * fix missing python thread initialization (bug #3349199)
+    - thanks to jarekczek for reporting this problem!
   * fix missing configure check for Python.h (bug #3092663)
     - thanks to Zoltan Kovacs for reporting this problem!
   * fix C++ wrapper missing Symbol.quality (bug #3076524)
